@@ -28,6 +28,7 @@
         <snakeyml.version>2.2</snakeyml.version>
         <jimfs.version>1.3.0</jimfs.version>
         <testExcludedGroups>HttpSmokeTest</testExcludedGroups>
+        <skip-jdk-cache>false</skip-jdk-cache>
     </properties>
 
     <dependencyManagement>
@@ -50,11 +51,6 @@
     </dependencyManagement>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>digital.slovensko.autogram</groupId>-->
-<!--            <artifactId>core</artifactId>-->
-<!--            <version>1.0.2-SNAPSHOT</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-service</artifactId>
@@ -193,6 +189,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
                     <configuration>
+                        <jvm>${jlink.jdk.path}${file.separator}bin${file.separator}java</jvm>
                         <excludedGroups>${testExcludedGroups}</excludedGroups>
                     </configuration>
                 </plugin>
@@ -206,6 +203,7 @@
 
                 <configuration>
                     <fork>true</fork>
+                    <executable>${jlink.jdk.path}${file.separator}bin${file.separator}javac</executable>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <compilerArgs>
@@ -268,26 +266,21 @@
                 <version>1.2.0</version>
                 <executions>
                     <execution>
-                        <id>call-jdeps</id>
+                        <id>cache-jdk-17</id>
                         <goals>
-                            <goal>jdeps</goal>
+                            <goal>cache-jdk</goal>
                         </goals>
                         <configuration>
-                            <!-- The output of jdeps is currently not used anywhere, modules are
-                            defined manually -->
-                            <skip>true</skip>
-                            <output>${project.build.directory}${file.separator}jdeps.out</output>
-                            <options>
-                                <option>--class-path</option>
-                                <option>./target/dependency-jars/*</option>
-                                <option>-R</option>
-                                <option>--multi-release</option>
-                                <option>${java.version}</option>
-                                <option>-f</option>
-                                <option>.*jar</option>
-                                <option>
-                                    ${project.build.directory}${file.separator}${project.build.finalName}.jar</option>
-                            </options>
+                            <skip>${skip-jdk-cache}</skip>
+                            <jdkPathProperty>jlink.jdk.path</jdkPathProperty>
+                            <jdkCachePath>${project.build.directory}${file.separator}jdkCache</jdkCachePath>
+                            <authorization>${github.auth}</authorization>
+                            <provider>BELLSOFT</provider>
+                            <providerConfig>
+                                <type>jdk</type>
+                                <version>17.0.7+7</version>
+                                <arch>amd64-full</arch>
+                            </providerConfig>
                         </configuration>
                     </execution>
 
@@ -298,16 +291,16 @@
                         </goals>
                         <configuration>
                             <output>${project.build.directory}${file.separator}preparedJDK</output>
+                            <modulePaths>
+                                <path>${jlink.jdk.path}${file.separator}jmods</path>
+                            </modulePaths>
                             <addModules>
                                 <module>java.compiler</module>
                                 <module>java.base</module>
                                 <module>java.xml</module>
-                                <module>java.desktop</module>
                                 <module>java.naming</module>
                                 <module>java.datatransfer</module>
                                 <module>java.net.http</module>
-                                <module>java.logging</module>
-                                <module>java.sql</module>
                                 <module>java.scripting</module>
                                 <module>jdk.unsupported</module>
                                 <module>jdk.httpserver</module>
@@ -318,8 +311,6 @@
                                 <option>--no-man-pages</option>
                                 <option>--strip-debug</option>
                                 <option>--strip-native-commands</option>
-                                <option>--add-modules</option>
-                                <option>${crypto.modules}</option>
                             </options>
                         </configuration>
                     </execution>
@@ -356,6 +347,14 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>system-jdk</id>
+            <properties>
+                <jlink.jdk.path>${env.JAVA_HOME}</jlink.jdk.path>
+                <skip-jdk-cache>true</skip-jdk-cache>
+            </properties>
+        </profile>
+
         <profile>
             <id>windows</id>
             <activation>
